# datamart

./: .gitignore  DATA_GOV_STRATEGY.md  DESIGN.md  DEVILS_ADVOCATE.md  GOVERNANCE.md  GOVERNANCE_ARCHITECTURE.md  PRD.md  PRODUCT_STRATEGY.md  ROADMAP.md  conftest.py  dashboard_guide.md  datamart_strategic_assessment.md  deep-research-report.md  dev_tips.md  pytest.ini  requirements.txt
api/: manage.py  requirements.txt
config/: .env.example
datamart-mcp/: pyproject.toml  server.py
ingestion/: base.py  census_acs5.py  compute_aggregates.py  compute_data_quality.py  ingest_bls_laus.py  ingest_cdc_places.py  ingest_ed_graduation.py  ingest_eia_energy.py  ingest_epa_aqi.py  ingest_fbi_crime.py  ingest_hud_fmr.py  ingest_nhtsa_traffic.py  ingest_usda_food_env.py  scrape_data_gov.py
migrations/: 000_schema_version.sql  001_initial_schema.sql  002_aggregate_tables.sql  003_cdc_places.sql  004_bls_laus.sql  005_usda_food_env.sql  006_county_profile_view.sql  007_epa_aqi.sql  008_fbi_crime.sql  009_datasets_catalog.sql  010_census_additional_vars.sql  011_hud_fmr.sql  012_eia_energy.sql  013_nhtsa_traffic.sql  014_ed_graduation.sql  015_governance_datasets_columns.sql  016_ingestion_runs.sql  017_schema_snapshots.sql  018_ingestion_run_id_fks.sql  019_seed_license_data.sql  020_data_gov_catalog.sql  migrate.sh
schema/: census.sql  schema.sql
scratch/: county_profile_mockup.html
server/: requirements.txt
tests/: test_aggregates.py  test_api.py  test_base_ingestion.py  test_data_quality.py  test_external_ingestion.py  test_ingestion.py  test_mcp_server.py  (+1 more)
(+22 files in other folders)
