[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "datamart-mcp"
version = "0.1.0"
description = "MCP server for U.S. county-level socioeconomic data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
datamart-mcp = "server:mcp.run"

[tool.setuptools.packages.find]
where = ["."]
